--- a/src/main/resources/ru/dz/vita2d/views/main.fxml
+++ b/src/main/resources/ru/dz/vita2d/views/main.fxml
@@ -5,9 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.StackPane?>
-<!-- <?import de.jensd.fx.fontawesome.AwesomeIcon?>
-<?import de.jensd.fx.fontawesome.AwesomeIconsStack?>
-<?import de.jensd.fx.fontawesome.Icon?> -->
+<!-- <?import de.jensd.fx.fontawesome.AwesomeIcon?> <?import de.jensd.fx.fontawesome.AwesomeIconsStack?> 
+	<?import de.jensd.fx.fontawesome.Icon?> -->
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.shape.Rectangle?>
@@ -27,66 +26,71 @@
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXPopup?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 
-<StackPane fx:id="root" xmlns:fx="http://javafx.com/fxml/1"
-	xmlns="http://javafx.com/javafx/8"
+<AnchorPane fx:id="root" prefWidth="1024.0" prefHeight="768.0"
+	xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
 	fx:controller="ru.dz.vita2d.ui.controller.MainController">
+
+	<children>
+		<StackPane fx:id="menu" AnchorPane.bottomAnchor="0.0"
+			AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0"
+			AnchorPane.rightAnchor="0.0">
+
+			<!-- Header -->
+			<BorderPane>
+				<top>
+					<VBox spacing="20">
+						<JFXToolbar>
+							<leftItems>
+								<JFXRippler maskType="CIRCLE" style="-fx-ripple-color:WHITE;">
+									<StackPane fx:id="titleBurgerContainer">
+										<JFXHamburger fx:id="titleBurger">
+											<HamburgerBackArrowBasicTransition />
+										</JFXHamburger>
+									</StackPane>
+								</JFXRippler>
+								<Label>Material Design</Label>
+							</leftItems>
+							<rightItems>
+								<JFXRippler fx:id="optionsRippler" maskType="CIRCLE"
+									style="-fx-ripple-color:WHITE;">
+									<StackPane fx:id="optionsBurger">
+										<JFXHamburger styleClass="jfx-options-burger">
+										</JFXHamburger>
+									</StackPane>
+								</JFXRippler>
+							</rightItems>
+						</JFXToolbar>
+					</VBox>
+				</top>
+
+				<!-- Content Area -->
+				<center>
+					<JFXDrawer fx:id="drawer" defaultDrawerSize="250"
+						direction="LEFT">
+						<styleClass>
+							<String fx:value="body" />
+						</styleClass>
+					</JFXDrawer>
+				</center>
+			</BorderPane>
+
+			<JFXPopup fx:id="toolbarPopup" styleClass="tool-bar-popup">
+				<JFXListView styleClass="option-list-view">
+					<Label>
+						Contact Us
+						<!-- <graphic> <Icon awesomeIcon="USER" size="1.5em" style=";" styleClass="option-jfx-list-view-icon" 
+							/> </graphic> -->
+					</Label>
+					<Label fx:id="exit">
+						Exit
+						<!-- <graphic> <Icon awesomeIcon="REPLY" size="1.5em" style=";" styleClass="option-jfx-list-view-icon" 
+							/> </graphic> -->
+					</Label>
+				</JFXListView>
+			</JFXPopup>
+		</StackPane>
+	</children>
 	
-	<!-- Header -->
-	<BorderPane>
-		<top>
-			<VBox spacing="20">
-				<JFXToolbar>
-					<leftItems>
-						<JFXRippler maskType="CIRCLE" style="-fx-ripple-color:WHITE;">
-							<StackPane fx:id="titleBurgerContainer">
-								<JFXHamburger fx:id="titleBurger">
-									<HamburgerBackArrowBasicTransition />
-								</JFXHamburger>
-							</StackPane>
-						</JFXRippler>
-						<Label>Material Design</Label>
-					</leftItems>
-					<rightItems>
-						<JFXRippler fx:id="optionsRippler" maskType="CIRCLE"
-							style="-fx-ripple-color:WHITE;">
-							<StackPane fx:id="optionsBurger">
-								<JFXHamburger styleClass="jfx-options-burger">
-								</JFXHamburger>
-							</StackPane>
-						</JFXRippler>
-					</rightItems>
-				</JFXToolbar>
-			</VBox>
-		</top>
-
-		<!-- Content Area -->
-		<center>
-			<JFXDrawer fx:id="drawer" defaultDrawerSize="250" direction="LEFT">
-				<styleClass>
-					<String fx:value="body" />
-				</styleClass>
-			</JFXDrawer>
-		</center>
-	</BorderPane>
-
-	<JFXPopup fx:id="toolbarPopup" styleClass="tool-bar-popup">
-		<JFXListView styleClass="option-list-view">
-			<Label>
-				Contact Us
-				<!-- <graphic>
-					<Icon awesomeIcon="USER" size="1.5em" style=";"
-						styleClass="option-jfx-list-view-icon" />
-				</graphic> -->
-			</Label>
-			<Label fx:id="exit">
-				Exit
-				<!-- <graphic>
-					<Icon awesomeIcon="REPLY" size="1.5em" style=";"
-						styleClass="option-jfx-list-view-icon" />
-				</graphic> -->
-			</Label>
-		</JFXListView>
-	</JFXPopup>
-
-</StackPane>
+</AnchorPane>
