--- a/src/main/resources/ru/dz/vita2d/views/main.fxml
+++ b/src/main/resources/ru/dz/vita2d/views/main.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.StackPane?>
-<!-- <?import de.jensd.fx.fontawesome.AwesomeIcon?> <?import de.jensd.fx.fontawesome.AwesomeIconsStack?> 
-	<?import de.jensd.fx.fontawesome.Icon?> -->
+<?import de.jensd.fx.fontawesome.AwesomeIcon?>
+<?import de.jensd.fx.fontawesome.AwesomeIconsStack?> 
+<?import de.jensd.fx.fontawesome.Icon?>
 <?import javafx.scene.shape.SVGPath?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.shape.Rectangle?>
@@ -80,17 +81,21 @@
 				<JFXListView styleClass="option-list-view">
 					<Label>
 						Contact Us
-						<!-- <graphic> <Icon awesomeIcon="USER" size="1.5em" style=";" styleClass="option-jfx-list-view-icon" 
-							/> </graphic> -->
+						<graphic>
+							<Icon awesomeIcon="USER" size="1.5em" style=";"
+								styleClass="option-jfx-list-view-icon" />
+						</graphic>
 					</Label>
 					<Label fx:id="exit">
 						Exit
-						<!-- <graphic> <Icon awesomeIcon="REPLY" size="1.5em" style=";" styleClass="option-jfx-list-view-icon" 
-							/> </graphic> -->
+						<graphic>
+							<Icon awesomeIcon="REPLY" size="1.5em" style=";"
+								styleClass="option-jfx-list-view-icon" />
+						</graphic>
 					</Label>
 				</JFXListView>
 			</JFXPopup>
 		</StackPane>
 	</children>
-	
+
 </AnchorPane>
