--- a/src/main/resources/ru/dz/vita2d/views/content.fxml
+++ b/src/main/resources/ru/dz/vita2d/views/content.fxml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
 
 <AnchorPane fx:id="contentArea" AnchorPane.bottomAnchor="0.0"
-	AnchorPane.topAnchor="60.0" AnchorPane.leftAnchor="0.0"
+	AnchorPane.topAnchor="64.0" AnchorPane.leftAnchor="0.0"
 	AnchorPane.rightAnchor="0.0" xmlns="http://javafx.com/javafx/8"
 	xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.dz.vita2d.ui.controller.ContentController">
 
+	<!-- <children>
+		<Pane fx:id="container" AnchorPane.bottomAnchor="0.0"
+			AnchorPane.topAnchor="0.0" AnchorPane.leftAnchor="0.0"
+			AnchorPane.rightAnchor="0.0">
+
+		</Pane>
+	</children>
+ -->
 
 
 
