--- a/src/main/resources/ru/dz/vita2d/views/sideMenu.fxml
+++ b/src/main/resources/ru/dz/vita2d/views/sideMenu.fxml
@@ -9,15 +9,20 @@
 <?import com.jfoenix.controls.JFXListView?>
 
 
-<StackPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+<StackPane fx:id="sideMenu" 
+	xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
 	fx:controller="ru.dz.vita2d.ui.controller.SideMenuController">
 
 	<styleClass>
 		<String fx:value="side-menu" />
 	</styleClass>
 	<JFXListView fx:id="sideList">
-		<Label fx:id="button"> Test </Label>
+		<Label fx:id="button1"> Test </Label>
+		<Label fx:id="button2"> Test </Label>
+		<Label fx:id="button3"> Test </Label>
+
 	</JFXListView>
-	
-	
+
+
+
 </StackPane>
